--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="card">
       <h2>My Interests</h2>
       <img src="images/praisethesun.jpg" alt="My hobby">
-      <p>My hobbies involve a lot of literature, occasional gaming, as well as hiking with family. Above is the a little gimmick of posing at the end of a hike. "Praise The Sun".</p>
+      <p>My hobbies involve a lot of literature, occasional gaming, as well as hiking with family. Above is the a little gimmick of posing at the end of a hike. Praise The Sun.</p>
     </section>
   </main>
 
