--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section class="card">
       <h2>My Interests</h2>
-      <img src="images/hobby.jpg" alt="My hobby">
+      <img src="images/praisethesun.jpg" alt="My hobby">
       <p>My hobbies involve a lot of literature, occasional gaming, as well as hiking with family. Above is the time I went to Disney Land with my family. Star Wars was a must for my brother and I.</p>
     </section>
   </main>
@@ -43,3 +43,4 @@
   </footer>
 </body>
 </html>
+
