--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <section class="card">
       <h2>My Interests</h2>
-      <img src="images/praisethesun.jpg" alt="My hobby">
-      <p>My hobbies involve a lot of literature, occasional gaming, as well as hiking with family. Above is the time I went to Disney Land with my family. Star Wars was a must for my brother and I.</p>
+           <img src="images/praisethesun.jpg" alt="My hobby">
+      <p>My hobbies involve a lot of literature, occasional gaming, as well as hiking with family. Above is the a little gimmick of posing at the end of a hike. Praise The Sun.</p>
     </section>
   </main>
 
@@ -43,4 +43,5 @@
   </footer>
 </body>
 </html>
+
 
