--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="WDD 131 – Dynamic Web Fundamentals, Your Name, course landing page with project links and scripture.">
   <meta name="author" content="Your Name">
 
-  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/layout.css">
   <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
