--- a/place.html
+++ b/place.html
@@ -25,7 +25,7 @@
     <section class="weather">
       <h3>Weather</h3>
       <!-- SVG in mobile view -->
-      <img src="images/sun-cloud.svg" alt="Weather icon" class="weather-icon-mobile">
+      <img src="images/suncloud1.svg" alt="Weather icon" class="weather-icon-mobile">
       <ul>
         <li>Temperature: <span id="temperature">12</span> °C</li>
         <li>Wind Speed: <span id="windSpeed">8</span> km/h</li>
